syntax = "proto2";
import "google/protobuf/timestamp.proto";

package protobuf;

option java_multiple_files = true;
option java_package = "assignment1.models.protobuf";
option java_outer_classname = "OwnerandPet";
//protoc --java_out=../../ ./Owner_and_Pet.proto

message Owner_proto {
  optional int32  owner_id = 1;
  optional string name = 2;
  optional google.protobuf.Timestamp birthdate = 3;
  optional int32 telephone = 4;
  optional string address = 5;

  message Pet_proto {
    optional int32 petId = 1;
    optional int32 ownerId = 2;
    optional string name = 3;
    optional string gender = 4;
    optional float weight = 5;
    optional google.protobuf.Timestamp birthdate = 6;
    optional string description = 7;

  }

  repeated Pet_proto pets = 6;
}
